# cuere

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  conftest.py  meson.build  mutmut-mypy.ini  pyproject.toml  pyrightconfig.json  security-insights.yml  zensical.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  settings.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: audit.yml  benchmark.yml  codeql.yml  coverage-comment.yml  dco.yml  dependency-review.yml  docs.yml  gitleaks.yml  lint.yml  osv-scan.yml  release.yml  scorecard.yml  test.yml  typecheck.yml
.well-known/: security.txt
benchmarks/: README.md  test_perf.py
docs/: bip-21.md  building.md  cli-reference.md  colors.md  cookbook.md  eip-681.md  fuzzing.md  index.md  lightning-uri.md  mutation-testing.md  output-formats.md  quickstart.md
docs/cookbook/: exporting.md  wallet-uris.md
docs/guides/: rendering.md
docs/reference/: api.md
docs/security/: dependencies.md  design.md  osps-baseline.md  policy-enforcement.md  threat-model.md
docs/stylesheets/: qr.css
examples/: demo.tape
scripts/: audit.py  check_dco.py  render_cookbook_qr.py  render_demo.py  render_docs_qr.py
src/cuere/: __init__.py  __main__.py  cli.py  errors.py  matrix.py  meson.build  output.py  render.py  rich.py  terminal.py  wallet.py
tests/: conftest.py  test_cli.py  test_cookbook_qr.py  test_docs_qr.py  test_init.py  test_matrix.py  test_output.py  test_packaging.py  test_render.py  test_render_properties.py  test_rich.py  test_terminal.py  test_types.py  test_wallet.py
tests/fuzz/: README.md  __init__.py  test_atheris_targets.py
tests/fuzz/atheris/: fuzz_render.py  fuzz_wallet.py  harness.py
tests/golden/: hello_ansi.txt  hello_block.txt  hello_half.txt  wc_uri_half.txt
