[project]
name = "cuere"
dynamic = ["version"]
description = "QR codes in your terminal: Unicode half-block rendering, Rich integration, wallet-URI helpers"
readme = "README.md"
license = "CC0-1.0"
license-files = ["LICENSE.md"]
requires-python = ">=3.13"
authors = [{ name = "Ivan Anishchuk", email = "ivan@agorism.org" }]
keywords = ["qr", "qrcode", "terminal", "tty", "cli", "wallet", "walletconnect"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Terminals",
    "Topic :: Multimedia :: Graphics",
    "Typing :: Typed",
]
dependencies = [
    "segno>=1.6.1",
    "typer>=0.16",
    "rich>=13.0",
]

[project.optional-dependencies]
# PNG export (cuere.output png format). Pillow is heavy and only needed for
# raster output, so it is an opt-in extra, imported lazily in cuere.output.
image = ["pillow>=11.0"]
# Documentation site (zensical.toml, new format — not legacy mkdocs.yml). Built
# with `uv run zensical build --clean --strict`; the CLI reference (issue #11)
# uses mkdocs-typer2's zensical-native markdown extension.
docs = [
    # Pre-1.0 / ZeroVer doc tooling is upper-bounded (runtime deps stay
    # floor-only): 0.0.x carries no compat guarantee and zensical's config
    # surface — markdown-extension hoisting, the mkdocstrings shim — churns
    # between releases, so cap to the tested minor.
    "zensical>=0.0.45,<0.1",
    # CLI reference: mkdocs-typer2's zensical-native markdown extension.
    "mkdocs-typer2[zensical]>=0.3,<0.4",
    # API reference: mkdocstrings python handler, configured in zensical.toml
    # under [project.plugins.mkdocstrings] (zensical has built-in support). The
    # floor tracks the 1.x line the config is validated against (the old 0.27
    # floor admitted untested majors).
    "mkdocstrings[python]>=1,<2",
]

[project.urls]
Homepage = "https://github.com/IvanAnishchuk/cuere"
Documentation = "https://ivananishchuk.github.io/cuere/"
Repository = "https://github.com/IvanAnishchuk/cuere"
Issues = "https://github.com/IvanAnishchuk/cuere/issues"
Changelog = "https://github.com/IvanAnishchuk/cuere/blob/main/CHANGELOG.md"
Security = "https://github.com/IvanAnishchuk/cuere/blob/main/SECURITY.md"

[project.scripts]
cuere = "cuere.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty",
    "pytest>=8.1",  # floor raised from 8.0: pytest-benchmark 5.x requires >=8.1
    "pytest-cov>=6.0",
    # Performance benchmarks (dev-only, run from benchmarks/ — not the test
    # suite). See benchmarks/README.md and .github/workflows/benchmark.yml.
    "pytest-benchmark>=5.0",
    "pip-audit>=2.7",
    "pre-commit>=4.0",
    "meson-python>=0.19.0",
    "meson>=1.11.1",
    "ninja>=1.13.0",
    "mypy>=1.14",
    "basedpyright>=1.39.7",
    "hypothesis>=6.155.2",
    "zizmor>=1.25",
    "mutmut>=3.5",
    # The image extra, pinned for the dev env so the type checkers resolve PIL
    # and the PNG tests can run; end users opt in via the `cuere[image]` extra.
    "pillow>=11.0",
]
# Coverage-guided fuzzing pilot (issue #96, docs/fuzzing.md) — DELIBERATELY NOT
# in `dev`: Atheris is a heavy native dependency (builds against clang/libFuzzer)
# and must not bloat the default `uv sync` or the blocking CI path. Opt in with
# `uv sync --group fuzz`. Apache-2.0, so — unlike the proprietary HypoFuzz (#37,
# local-only) — it is an allow-listed, declared dependency.
fuzz = [
    # Floor is 3.1: 3.1.0 is the first release with Python 3.14 wheels (cuere's
    # CI tests 3.13 and 3.14) and native 3.11-3.14 support (no version shim).
    # Atheris ships manylinux x86_64 wheels; on other platforms `uv sync
    # --group fuzz` builds from source and needs clang/libFuzzer.
    "atheris>=3.1.0",
]

[build-system]
requires = ["meson-python>=0.19.0"]
build-backend = "mesonpy"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "SIM",   # flake8-simplify
    "BLE",   # flake8-blind-except
    "TRY",   # tryceratops
    "RUF",   # ruff-specific
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "C4",    # flake8-comprehensions
    "PL",    # pylint
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert is fine in tests
    "S314",    # ET.fromstring parses cuere's own generated SVG, not untrusted input
    "S603",    # subprocess with validated input in fixtures
    "S607",    # partial executable path in test setup
    "BLE001",  # broad Exception in test fixtures
    "T20",     # print is useful in test debugging
    "PLR2004", # magic values are expected in golden/glyph tests
]
"scripts/*" = [
    "S603",    # subprocess args are list literals, not user input
    "S607",    # partial paths are fine for well-known tools (uv, python)
]
"benchmarks/*" = [
    "S101",    # assert is fine in benchmark sanity checks
    "PLR2004", # payload sizes / scales are expected literals
]
# Atheris fuzz targets (nested, so not covered by the flat "tests/*" globs).
"tests/fuzz/atheris/*" = [
    "E402",    # the canonical atheris bootstrap imports after sys.path / inside instrument_imports()
    "S101",    # asserts ARE the fuzz oracle (an invariant breach should crash)
]
"tests/fuzz/test_atheris_targets.py" = [
    "S603",    # subprocess args are a list literal, not user input
    "S607",    # `timeout` is a well-known coreutils tool, partial path is fine
]

[tool.ruff.lint.pylint]
# show()/the CLI command expose many keyword-only rendering options by design
# (the CLI grew --output and --scale for the format dispatcher, then --dark and
# --light for terminal color customization).
max-args = 16
max-returns = 8
max-branches = 15
max-statements = 60

[tool.ruff.lint.isort]
known-first-party = ["cuere"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
# Dev-only Atheris harnesses; see the [tool.mypy] exclude note above.
exclude = ["tests/fuzz/"]

[tool.mypy]
python_version = "3.13"
# tests/fuzz are dev-only Atheris harnesses (import the untyped `atheris`, only
# present in the `fuzz` group); like benchmarks/ they are ruff-scope only, kept
# out of the strict type-check pass. ty and basedpyright exclude them too.
exclude = ['^tests/fuzz/']
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
# Made explicit even though `strict = true` already implies them: pins the
# intent and survives any future change to what the strict bundle enables.
strict_equality = true
warn_redundant_casts = true

[tool.basedpyright]
typeCheckingMode = "recommended"
# Other settings (pythonVersion, venvPath, venv, extraPaths, include) live in
# pyrightconfig.json so vanilla pyright (used by IDE/LSP integrations) and
# basedpyright share one source of truth.

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    # Atheris coverage-guided fuzz smoke tests (tests/fuzz). Excluded from the
    # default run below; needs the fuzzer installed (`uv sync --group fuzz`).
    # Select explicitly: `uv run --group fuzz pytest tests/fuzz -m atheris`.
    "atheris: Atheris coverage-guided fuzz targets (dev-only, opt-in)",
]
addopts = [
    # Keep the fuzz smoke tests out of the default suite: they are slow, need
    # the `fuzz` group, and contribute no src coverage. `-m atheris` on the CLI
    # overrides this to select them.
    "-m", "not atheris",
    "--strict-markers",
    "--strict-config",
    "--cov=cuere",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
    "--cov-report=html:.reports/test/htmlcov",
    "--cov-report=xml:.reports/test/coverage.xml",
    "--junitxml=.reports/test/test-results.xml",
    "-ra",
]
junit_family = "xunit2"
junit_logging = "all"
junit_log_passing_tests = false

[tool.coverage.run]
source_pkgs = ["cuere"]
branch = true
relative_files = true

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "if __name__",
    "pragma: no cover",
    "if TYPE_CHECKING:",
    # Protocol method bodies are non-executable stubs (`...`), never called at
    # runtime — coverage.py's recommended exclusion for them.
    'class .*\bProtocol\):',
]

[tool.mutmut]
# Mutation testing — run locally (`uv run mutmut run`), NOT in CI.
# See docs/mutation-testing.md for the workflow and accepted equivalent mutants.
source_paths = ["src/cuere/"]
pytest_add_cli_args_test_selection = ["tests/"]
# Root files needed in mutmut's sandbox copy: test_packaging.py reads
# meson.build/pyproject.toml, conftest.py puts the mutated src/ on sys.path,
# and mutmut-mypy.ini is the relaxed config for the type-check pass below.
also_copy = ["meson.build", "pyproject.toml", "conftest.py", "mutmut-mypy.ini"]
# Type-check pass: mypy runs over the whole mutant tree first; any mutant that
# introduces a type error (e.g. passing None to a typed parameter) is "caught"
# (🧙) and skipped from the test run. Uses a relaxed config (mutmut-mypy.ini),
# not the project's strict one, to ignore mutmut's own scaffolding. JSON output
# is required by mutmut's parser. See docs/mutation-testing.md.
type_check_command = ["mypy", "--output=json", "--config-file=mutmut-mypy.ini", "src/cuere/"]
# Clear cuere's coverage/junit addopts; mutmut handles its own isolation.
# Deselect 3 install-dependent tests (subprocess imports + dist metadata) that
# can't pass when the project is run uninstalled, as mutmut requires here.
pytest_add_cli_args = [
    "--no-cov",
    "--override-ini=addopts=",
    # --override-ini wipes addopts (incl. `-m "not atheris"`), so re-exclude the
    # dev-only Atheris fuzz tests here: they fuzz in subprocesses and, run
    # uninstalled, would fail every mutant.
    "--ignore=tests/fuzz",
    "--deselect=tests/test_cli.py::test_python_dash_m_entry_point",
    "--deselect=tests/test_init.py::test_version_is_resolved",
    "--deselect=tests/test_rich.py::test_importing_cuere_does_not_import_rich_or_typer",
]
