# Meson does not glob: every shipped file must be listed here explicitly.
# tests/test_packaging.py asserts this list stays in sync with the directory.
py.install_sources(
    '__init__.py',
    '__main__.py',
    'cli.py',
    'errors.py',
    'matrix.py',
    'output.py',
    'render.py',
    'rich.py',
    'terminal.py',
    'wallet.py',
    'py.typed',
    subdir: 'cuere',
)
